force-app/main/default/objects/SBTR__c/SBTR__c.object-meta.xml
<CustomObject>
    <description>Thiis object is created to manage sales booking tracking</description>
    <label>SBTR</label>
    <nameField>
        <displayFormat>SBTR-{00}</displayFormat>
        <label>SBTR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SBTRs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>