force-app/main/default/objects/SBTR__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <description>25/08: X10_Date__c -  DATEVALUE(Booking__r.Booking_Date__c)</description>
    <formula>Collection_Report__r.X10_As_Per_GL_Date__c -  Booked_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>