force-app/main/default/objects/SBTR__c/fields/Applicant_Details__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Details</label>
    <referenceTo>Applicant_Details__c</referenceTo>
    <relationshipLabel>SBTRs</relationshipLabel>
    <relationshipName>SBTRs</relationshipName>
    <type>Lookup</type>
</CustomField>