force-app/main/default/objects/SBTR__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <summaryFilterItems>
        <field>SBTR_Approval__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Lvl3 Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>SBTR_Approval__c.SBTR__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>