force-app/main/default/objects/SBTR__c/fields/Attended_by__c.field-meta.xml
<CustomField>
    <fullName>Attended_by__c</fullName>
    <label>Attended by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>