force-app/main/default/objects/SBTR__c/fields/Balance_Payable__c.field-meta.xml
<CustomField>
    <fullName>Balance_Payable__c</fullName>
    <formula>IF ( No_of_Sales_Mgrs__c &gt; 1,Booking__r.Full_Due__c/2,
Booking__r.Full_Due__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>