force-app/main/default/objects/SBTR__c/fields/Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date__c</fullName>
    <description>We will pick from NSA (Booked Date)</description>
    <label>Booked Date</label>
    <type>Date</type>
</CustomField>