force-app/main/default/objects/SBTR__c/fields/Booked_Year1__c.field-meta.xml
<CustomField>
    <fullName>Booked_Year1__c</fullName>
    <formula>Booked_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Year</label>
    <type>Text</type>
</CustomField>