force-app/main/default/objects/SBTR__c/fields/Booking_Form_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Date__c</fullName>
    <formula>Booking__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Form Date</label>
    <type>Date</type>
</CustomField>