force-app/main/default/objects/SBTR__c/fields/Broker_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company_Name__c</fullName>
    <formula>Channel_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Company Name</label>
    <type>Text</type>
</CustomField>