force-app/main/default/objects/SBTR__c/fields/Broker_Contact_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact_Name_New__c</fullName>
    <label>Broker Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>