force-app/main/default/objects/SBTR__c/fields/Bulk_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Booking_Date__c</fullName>
    <label>Bulk Booking Date</label>
    <type>Date</type>
</CustomField>