force-app/main/default/objects/SBTR__c/fields/Bulk_Deal__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this gets updated to True if bookings for one customer are done same day are more than 3</description>
    <label>Bulk/Standard Deal</label>
    <type>Checkbox</type>
</CustomField>