force-app/main/default/objects/SBTR__c/fields/Cancelled_Units__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Units__c</fullName>
    <formula>IF(NOT(ISNULL( Booking__r.Cancellation_Date__c)) ||  TEXT(Booking__r.Status__c)=&apos;Cancelled&apos;, &apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancelled Units</label>
    <type>Text</type>
</CustomField>