force-app/main/default/objects/SBTR__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel &amp; Swap</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Upgrade</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Downgrade</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Rebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>