force-app/main/default/objects/SBTR__c/fields/Category_Agent__c.field-meta.xml
<CustomField>
    <fullName>Category_Agent__c</fullName>
    <formula>TEXT(Channel_Partner__r.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Agent</label>
    <type>Text</type>
</CustomField>