force-app/main/default/objects/SBTR__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>any update will trigger in approval</description>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>SBTRs</relationshipLabel>
    <relationshipName>SBTRs</relationshipName>
    <type>Lookup</type>
</CustomField>