force-app/main/default/objects/SBTR__c/fields/Chargeable_Area_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Area_sq_ft__c</fullName>
    <label>Total Chargeable Area (sq.ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>