force-app/main/default/objects/SBTR__c/fields/CM_Include__c.field-meta.xml
<CustomField>
    <fullName>CM_Include__c</fullName>
    <label>CM Include</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>