force-app/main/default/objects/SBTR__c/fields/CM_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>CM_Product_Group__c</fullName>
    <description>Default Standard, any change will go for approval.</description>
    <label>CM Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>