force-app/main/default/objects/SBTR__c/fields/Collectable_10__c.field-meta.xml
<CustomField>
    <fullName>Collectable_10__c</fullName>
    <formula>IF( No_of_Sales_Mgrs__c &gt; 1,
((Sale_Value_AED__c *10)/100)/2, (Sale_Value_AED__c *10)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collectable 10%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>