force-app/main/default/objects/SBTR__c/fields/Collection_10__c.field-meta.xml
<CustomField>
    <fullName>Collection_10__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <description>1411/23: created for new changes</description>
    <label>Collection 10 %</label>
    <length>10</length>
    <type>Text</type>
</CustomField>