force-app/main/default/objects/SBTR__c/fields/Collection_Report__c.field-meta.xml
<CustomField>
    <fullName>Collection_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Report</label>
    <referenceTo>Collection_Report__c</referenceTo>
    <relationshipLabel>SBTRs</relationshipLabel>
    <relationshipName>SBTRs</relationshipName>
    <type>Lookup</type>
</CustomField>