force-app/main/default/objects/SBTR__c/fields/Declared_Date__c.field-meta.xml
<CustomField>
    <fullName>Declared_Date__c</fullName>
    <description>will come from NSA (on update @ NSA)</description>
    <label>Declared Date</label>
    <type>Date</type>
</CustomField>