force-app/main/default/objects/SBTR__c/fields/DLD_Amount__c.field-meta.xml
<CustomField>
    <fullName>DLD_Amount__c</fullName>
    <description>DLP Paid Amount</description>
    <formula>Collection_Report__r.Total_DLD_Amount_Paid__c</formula>
    <inlineHelpText>DLP Paid Amount</inlineHelpText>
    <label>Original DLD Collection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>