force-app/main/default/objects/SBTR__c/fields/DLD_Amountsd__c.field-meta.xml
<CustomField>
    <fullName>DLD_Amountsd__c</fullName>
    <formula>IF( No_of_Sales_Mgrs__c &gt; 1,
 DLD_Amount__c/2, DLD_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes Shared Deal</inlineHelpText>
    <label>DLD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>