force-app/main/default/objects/SBTR__c/fields/DLD_Collection__c.field-meta.xml
<CustomField>
    <fullName>DLD_Collection__c</fullName>
    <formula>Collection_Report__r.Total_DLD_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Collection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>