force-app/main/default/objects/SBTR__c/fields/DLD_Status__c.field-meta.xml
<CustomField>
    <fullName>DLD_Status__c</fullName>
    <description>updated on 27 oct as per new email
earlier was: IF(DLD_Amount__c &gt; 0, &apos;Yes&apos;,&apos;No&apos;)</description>
    <formula>IF((0.04* Sale_Value_AED__c - DLD_Amount__c)&lt;=1500, &apos;Yes&apos;,&apos;No&apos;

)</formula>
    <label>DLD Status</label>
    <type>Text</type>
</CustomField>