force-app/main/default/objects/SBTR__c/fields/DLD_Waiver__c.field-meta.xml
<CustomField>
    <fullName>DLD_Waiver__c</fullName>
    <label>DLD Waiver%</label>
    <length>255</length>
    <type>Text</type>
</CustomField>