force-app/main/default/objects/SBTR__c/fields/Final_BookingAmount_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_BookingAmount_Received__c</fullName>
    <formula>IF(
Total_Booking_Amount_Received__c &gt; 0,
IF(No_of_Sales_Mgrs__c &gt; 1,Total_Booking_Amount_Received__c/2,Total_Booking_Amount_Received__c),
IF(No_of_Sales_Mgrs__c &gt; 1,Manual_BookingAmount_Received__c/2,Manual_BookingAmount_Received__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final BookingAmount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>