force-app/main/default/objects/SBTR__c/fields/Initial_POP_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_POP_Date__c</fullName>
    <label>Initial POP Date</label>
    <type>Date</type>
</CustomField>