force-app/main/default/objects/SBTR__c/fields/Manual_BookingAmount_Received__c.field-meta.xml
<CustomField>
    <fullName>Manual_BookingAmount_Received__c</fullName>
    <description>this is created to hold amount for manual booking  (without NSA)</description>
    <label>Manual BookingAmount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>