force-app/main/default/objects/SBTR__c/fields/Month_Of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Month_Of_Sale__c</fullName>
    <formula>MONTH( Sale_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Of Sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>