force-app/main/default/objects/SBTR__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <formula>TEXT( Applicant_Details__r.Nationality__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer Nationality</label>
    <type>Text</type>
</CustomField>