force-app/main/default/objects/SBTR__c/fields/New_Sale_Approval__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSA</label>
    <referenceTo>unit_hold_request__c</referenceTo>
    <relationshipLabel>SBTRs</relationshipLabel>
    <relationshipName>SBTRs</relationshipName>
    <type>Lookup</type>
</CustomField>