force-app/main/default/objects/SBTR__c/fields/No_of_Sales_Mgrs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sales_Mgrs__c</fullName>
    <formula>IF (
NOT(ISBLANK( Sales_Manager__c)) &amp;&amp; ISBLANK( Secondary_Sales_Manager__c),1,
IF(
NOT(ISBLANK(Sales_Manager__c)) &amp;&amp; NOT(ISBLANK(Secondary_Sales_Manager__c)),2,0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Sales Mgrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>