force-app/main/default/objects/SBTR__c/fields/Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Date__c</fullName>
    <formula>Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Date</label>
    <type>Date</type>
</CustomField>