force-app/main/default/objects/SBTR__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <description>IF( No_of_Sales_Mgrs__c &gt;1,( (Collection_Report__r.Total_Paid_Amount__c/Total_Amount_To_Be_Collected__c ))/2,
(Collection_Report__r.Total_Paid_Amount__c/Total_Amount_To_Be_Collected__c )
)</description>
    <formula>IF(
NOT(ISNULL(Collection_Report__c)) &amp;&amp; NOT(ISNULL(Collection_Report__r.Total_Paid_Amount__c)) &amp;&amp; NOT(ISNULL(Total_Amount_To_Be_Collected__c)),
(Collection_Report__r.Total_Paid_Amount__c/Total_Amount_To_Be_Collected__c ),
null
)</formula>
    <label>Paid %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>