force-app/main/default/objects/SBTR__c/fields/POP_Percentage__c.field-meta.xml
<CustomField>
    <fullName>POP_Percentage__c</fullName>
    <description>Booked amount/Sale Value</description>
    <formula>( Total_Booking_Amount_Received__c / Sale_Value_AED__c )*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Booking Amnt % against Sales Value</inlineHelpText>
    <label>POP Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>