force-app/main/default/objects/SBTR__c/fields/POP_Percentage_New__c.field-meta.xml
<CustomField>
    <fullName>POP_Percentage_New__c</fullName>
    <label>POP Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>