force-app/main/default/objects/SBTR__c/fields/Post_Completion_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Post_Completion_Payment_Plan__c</fullName>
    <description>% of amount to be paid post completion</description>
    <label>Post Completion Payment Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>