force-app/main/default/objects/SBTR__c/fields/Primary_Customer_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Nationality__c</fullName>
    <label>Primary Customer Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>