force-app/main/default/objects/SBTR__c/fields/Product_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_1__c</fullName>
    <formula>Booking__r.Cluster__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 1</label>
    <type>Text</type>
</CustomField>