force-app/main/default/objects/SBTR__c/fields/Product_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_2__c</fullName>
    <formula>Booking__r.Tower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 2</label>
    <type>Text</type>
</CustomField>