force-app/main/default/objects/SBTR__c/fields/Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion_Date__c</fullName>
    <formula>Booking__r.Unit__r.Tower__r.Date_of_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Completion Date</label>
    <type>Date</type>
</CustomField>