force-app/main/default/objects/SBTR__c/fields/Project_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Sub_Type__c</fullName>
    <formula>Booking__r.Cluster__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project - Sub Type</label>
    <type>Text</type>
</CustomField>