force-app/main/default/objects/SBTR__c/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <formula>IF(
    NOT( ISNULL( Payment_Date__c ) ) &amp;&amp; NOT( ISNULL( Booking__r.Audit_Approval_Date__c ) ) &amp;&amp; TEXT( Booking__r.Current_Status__c ) = &apos;Audit Accepted&apos;,
    IF(
        Booking__r.Audit_Approval_Date__c &gt;= Payment_Date__c,
        Booking__r.Audit_Approval_Date__c,
        Payment_Date__c
    ),
    NULL
)</formula>
    <label>Qualified Date</label>
    <type>Date</type>
</CustomField>