force-app/main/default/objects/SBTR__c/fields/Rate_per_sq_ft_AED_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_sq_ft_AED_sq_ft__c</fullName>
    <description>Sale Value / Area
Sale_Value_AED__c /  Saleable_Area_sq_ft__c</description>
    <formula>Sale_Value_AED__c / Saleable_Area_sq_ft__c</formula>
    <label>Rate per sq.ft. (AED/sq.ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>