force-app/main/default/objects/SBTR__c/fields/Recognized_Sales__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Sales__c</fullName>
    <description>IF( NOT(ISNULL( Declared_Date__c )), &apos;Yes&apos;,&apos;No&apos;)
IF( Collection_10__c =&apos;Yes&apos;,&apos;Yes&apos;,&apos;No&apos;


)</description>
    <formula>IF( Collection_10__c =&apos;Yes&apos;,&apos;Yes&apos;,&apos;No&apos;


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recognized Sales</label>
    <type>Text</type>
</CustomField>