force-app/main/default/objects/SBTR__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>IF( NOT(ISNULL(Payment_Date__c)) &amp;&amp;  TEXT(Booking__r.Current_Status__c) =&apos;Audit Accepted&apos;,
&apos;SBTR&apos;,&apos;Blocking&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>