force-app/main/default/objects/SBTR__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <formula>TEXT(Applicant_Details__r.Subtype_Of_Applicant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resident</label>
    <type>Text</type>
</CustomField>