force-app/main/default/objects/SBTR__c/fields/Sale_Value_AED__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value_AED__c</fullName>
    <label>Original Sale Value (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>