force-app/main/default/objects/SBTR__c/fields/Saleable_Area_sq_ft1__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_sq_ft1__c</fullName>
    <formula>IF(
 No_of_Sales_Mgrs__c &gt; 1,  Saleable_Area_sq_ft__c/2, 

Saleable_Area_sq_ft__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleable Area (sq.ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>