force-app/main/default/objects/SBTR__c/fields/Saleable_Area_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_sq_ft__c</fullName>
    <description>same as Chargeable area</description>
    <label>Total Saleable Area (sq.ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>