force-app/main/default/objects/SBTR__c/fields/Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head__c</fullName>
    <description>From Booking updates  (Sales Head VP)</description>
    <label>Sales Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>