force-app/main/default/objects/SBTR__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <label>Attended by 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>