force-app/main/default/objects/SBTR__c/fields/Secondary_Customer_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Nationality__c</fullName>
    <label>Secondary Customer Nationality</label>
    <length>60</length>
    <type>Text</type>
</CustomField>