force-app/main/default/objects/SBTR__c/fields/Secondary_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Manager__c</fullName>
    <label>Attended by 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>