force-app/main/default/objects/SBTR__c/fields/Service_Charge_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Waiver__c</fullName>
    <label>Service Charge Waiver Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>