force-app/main/default/objects/SBTR__c/fields/Source_Classification_2__c.field-meta.xml
<CustomField>
    <fullName>Source_Classification_2__c</fullName>
    <label>Source Classification 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>