force-app/main/default/objects/SBTR__c/fields/SPA_Executed__c.field-meta.xml
<CustomField>
    <fullName>SPA_Executed__c</fullName>
    <formula>IF(TEXT(Booking__r.SPA_Executed__c )=&apos;SPA Executed&apos;||TEXT(Booking__r.SPA_Executed__c)=&apos;Audit Review completed&apos;||TEXT(Booking__r.SPA_Executed__c)=&apos;Executed copy sent through DocuSign&apos;, &apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Executed</label>
    <type>Text</type>
</CustomField>