force-app/main/default/objects/SBTR__c/fields/Sr_VP__c.field-meta.xml
<CustomField>
    <fullName>Sr_VP__c</fullName>
    <formula>New_Sale_Approval__r.Sales_Head_SVP__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sr. VP</label>
    <type>Text</type>
</CustomField>