force-app/main/default/objects/SBTR__c/fields/Team_Head_2__c.field-meta.xml
<CustomField>
    <fullName>Team_Head_2__c</fullName>
    <description>Secondary Mgr&apos;s Mgr</description>
    <label>Team Head 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>