force-app/main/default/objects/SBTR__c/fields/Team_Head__c.field-meta.xml
<CustomField>
    <fullName>Team_Head__c</fullName>
    <description>Sales Mgr&apos;s Mgr</description>
    <label>Team Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>