force-app/main/default/objects/SBTR__c/fields/Total_Amount_To_Be_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_To_Be_Collected__c</fullName>
    <description>Unit Price</description>
    <formula>Collection_Report__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Price</inlineHelpText>
    <label>Total Amount To Be Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>