force-app/main/default/objects/SBTR__c/fields/Total_Booking_Amount_Received1__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Amount_Received1__c</fullName>
    <description>IF(
No_of_Sales_Mgrs__c&gt; 1, (Total_Booking_Amount_Received__c/2), Total_Booking_Amount_Received__c
)</description>
    <formula>IF(
No_of_Sales_Mgrs__c&gt; 1, (Total_Booking_Amount_Received__c/2), Total_Booking_Amount_Received__c
)</formula>
    <inlineHelpText>Includes Shared Deal</inlineHelpText>
    <label>Booking Amount Received (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>