force-app/main/default/objects/SBTR__c/fields/Total_Booking_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Amount_Received__c</fullName>
    <description>this is to track full blocking amount, and will display in diff field basis deal type (regular or split)</description>
    <label>Original Total Booking Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>