force-app/main/default/objects/SBTR__c/fields/Unit_Booked__c.field-meta.xml
<CustomField>
    <fullName>Unit_Booked__c</fullName>
    <description>IF(
NOT(ISNULL(Booked_Date__c)),Unit_No__c  &amp; &apos;--&apos; &amp; TEXT(DAY( Booked_Date__c ))+&apos;-&apos;+TEXT(MONTH(Booked_Date__c)), 
Unit_No__c  
)</description>
    <formula>IF(
  NOT(ISNULL(Booked_Date__c)),
  Unit_No__c &amp; &apos;--&apos; &amp; TEXT(DAY(Booked_Date__c)) &amp; &apos;-&apos; &amp; 
  CASE(
    MONTH(Booked_Date__c),
    1, &apos;Jan&apos;,
    2, &apos;Feb&apos;,
    3, &apos;Mar&apos;,
    4, &apos;Apr&apos;,
    5, &apos;May&apos;,
    6, &apos;Jun&apos;,
    7, &apos;Jul&apos;,
    8, &apos;Aug&apos;,
    9, &apos;Sep&apos;,
    10, &apos;Oct&apos;,
    11, &apos;Nov&apos;,
    12, &apos;Dec&apos;,
    &apos;NA&apos;
  ) &amp; &apos;-&apos; &amp; TEXT(YEAR(Booked_Date__c)),
  Unit_No__c
)</formula>
    <label>Unit_Booked</label>
    <type>Text</type>
</CustomField>