force-app/main/default/objects/SBTR__c/fields/Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Unit_Count__c</fullName>
    <formula>IF
(
 No_of_Sales_Mgrs__c &gt; 1, 0.5, 1

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Count</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>