force-app/main/default/objects/SBTR__c/fields/X10_Date__c.field-meta.xml
<CustomField>
    <fullName>X10_Date__c</fullName>
    <formula>IF(
NOT(ISNULL(Collection_Report__c)) &amp;&amp; NOT(ISNULL(Collection_Report__r.X10_As_Per_GL_Date__c)),
TEXT(DAY(Collection_Report__r.X10_As_Per_GL_Date__c)) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Collection_Report__r.X10_As_Per_GL_Date__c),
1, &quot;JAN&quot;,
2, &quot;FEB&quot;,
3, &quot;MAR&quot;,
4, &quot;APR&quot;,
5, &quot;MAY&quot;,
6, &quot;JUN&quot;,
7, &quot;JUL&quot;,
8, &quot;AUG&quot;,
9, &quot;SEP&quot;,
10, &quot;OCT&quot;,
11, &quot;NOV&quot;,
12, &quot;DEC&quot;,
&quot;Unknown&quot;
) &amp; &quot;-&quot; &amp; RIGHT(TEXT(YEAR(Collection_Report__r.X10_As_Per_GL_Date__c)),2),
&apos;NA&apos;
)</formula>
    <label>10%_Date</label>
    <type>Text</type>
</CustomField>